--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.2",
+    "firebase": "^10.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.47.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.32",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
