--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
+    "react-social-icons": "^6.4.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.32",
     "swiper": "^10.3.1"
